# MarketologBot

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml  session_gen.py
.github/workflows/: ci.yml
app/: config.py  metrics.py
app/bot/: autojoin.py  autojoin_runner.py  resolve_allowlist_from_autojoin.py  userbot.py
app/control_center/: config.py  main.py
app/services/: admin_api.py  bot_env_sync.py  cache.py  keywords.py  llm.py  ratelimiter.py
app/storage/: migrations_add_bot_name_to_message_log.py  migrations_init_bot_configs.py  migrations_init_channel_status.py  migrations_init_links.py  migrations_init_message_log.py  migrations_seed_channel_status_from_allowlist.py  populate_bot_configs.py  repository.py  run_migratrions.py  stats_repository.py
tests/: test_cache.py  test_config.py  test_llm.py  test_llm_helpers.py  test_scheduler.py  test_userbot_core.py
